Dark mode fixes.

--- a/iXBRLViewerPlugin/viewer/src/less/colours-dark-mode.less
+++ b/iXBRLViewerPlugin/viewer/src/less/colours-dark-mode.less
@@ -45,3 +45,7 @@
 
 @colour-row-hover-d: lighten(@colour-bg-d, 29.4);
 @colour-row-odd-d: @colour-button-bg-d;
+@colour-table-header-bg-d: @colour-bg-d;
+
+@colour-active-bg-d: @colour-bg-d;
+@colour-inactive-bg-d: lighten(@colour-bg-d, 29.4);
