--- a/iXBRLViewerPlugin/viewer/src/less/colours.less
+++ b/iXBRLViewerPlugin/viewer/src/less/colours.less
@@ -21,6 +21,7 @@
 @colour-text-form-value: lighten(@colour-foreground, 45); // #737373
 
 @colour-border-grey: lighten(@colour-foreground, 79.6078);
+@colour-active-bg: @colour-bg;
 @colour-inactive-bg: #f0f0f0;
 @colour-table-header-bg: #f9f9f9;
 
