--- a/iXBRLViewerPlugin/viewer/src/less/inspector.less
+++ b/iXBRLViewerPlugin/viewer/src/less/inspector.less
@@ -45,6 +45,7 @@
   --colour-highlight-5: @colour-highlight-5;
   --colour-highlight-default: @colour-highlight-default;
   --colour-inactive-bg: @colour-inactive-bg;
+  --colour-active-bg: @colour-active-bg;
   --colour-table-header-bg: @colour-table-header-bg;
   --colour-icon-grey: @colour-icon-grey;
   --colour-linked-fact: @colour-linked-fact;
@@ -71,6 +72,7 @@
 }
 
 :root[data-ixbrl-viewer-theme="dark"] {
+  --colour-active-bg: @colour-active-bg-d;
   --colour-bg-selected: @colour-bg-selected-d;
   --colour-bg-tag: @colour-bg-tag-d;
   --colour-bg: @colour-bg-d;
@@ -90,6 +92,7 @@
   --colour-highlight-2: @colour-highlight-2-d;
   --colour-highlight-default: @colour-highlight-default-d;
   --colour-icon-grey: @colour-icon-grey-d;
+  --colour-inactive-bg: @colour-inactive-bg-d;
   --colour-linked-fact: @colour-linked-fact-d;
   --colour-loader: @colour-loader-d;
   --colour-primary-focus: @colour-primary-focus-d;
@@ -97,6 +100,7 @@
   --colour-related-fact: @colour-related-fact-d;
   --colour-row-odd: @colour-row-odd-d;
   --colour-row-hover: @colour-row-hover-d;
+  --colour-table-header-bg: @colour-table-header-bg-d;
   --colour-text-form-value: @colour-text-form-value-d;
   --colour-text-light: @colour-text-light-d;
   --colour-text-title: @colour-text-title-d;
