--- a/iXBRLViewerPlugin/viewer/src/less/summary.less
+++ b/iXBRLViewerPlugin/viewer/src/less/summary.less
@@ -68,7 +68,7 @@
 .radio-pills {
   & > button {
     &.selected {
-      background-color: var(--colour-bg);
+      background-color: var(--colour-active-bg);
     }
 
     &:first-of-type {
